--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "prettier": "^2.3.2"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "nanoid": "^3.1.23"
+    "express": "^4.17.1"
   }
 }
